@@ -1,4 +1,4 @@
-#define RUBY_VERSION "1.6.5"
-#define RUBY_RELEASE_DATE "2001-12-03"
-#define RUBY_VERSION_CODE 165
-#define RUBY_RELEASE_CODE 20011203
+#define RUBY_VERSION "1.6.6"
+#define RUBY_RELEASE_DATE "2001-12-04"
+#define RUBY_VERSION_CODE 166
+#define RUBY_RELEASE_CODE 20011204
